test/expected/explain_vo_exclam_k_b.out
struct S; explain virtual bool operator!(S)
                    ^
21: error: member operator ! must have exactly 0 parameters
